--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,10 @@
 language: ruby
-before_script: bundle exec rake test_app
+before_script:
+- bundle exec rake test_app
+- cd spec/dummy/
+- bundle exec rails g delayed_job:active_record
+- RAILS_ENV=test bundle exec rake db:migrate
+- cd ../..
 script: bundle exec rspec
 env:
 - DB=sqlite3
